[gd_scene load_steps=10 format=3 uid="uid://ur6x7fnkh0cj"]

[ext_resource type="Script" path="res://script/units/unit_entity.gd" id="1_s0qnc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jr81a"]
radius = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqfsx"]
bg_color = Color(0.635294, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ny5dp"]
bg_color = Color(0.231721, 0.716715, 9.62615e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc6k0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77f7n"]
bg_color = Color(0.0352941, 0, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_loigc"]
radius = 128.25

[sub_resource type="CircleShape2D" id="CircleShape2D_8bial"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1ie7s"]
radius = 256.125

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
input_pickable = true
motion_mode = 1
script = ExtResource("1_s0qnc")
default_hp = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jr81a")
debug_color = Color(0.836017, 0, 0.391761, 0.42)

[node name="HpBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -27.0
offset_top = -35.0
offset_right = 27.0
offset_bottom = -34.0
scale = Vector2(1, 0.974341)
theme_override_colors/font_color = Color(1.92523e-06, 0.934839, 0.424783, 1)
theme_override_colors/font_outline_color = Color(0.895315, 0.497039, 0.407601, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_tqfsx")
theme_override_styles/fill = SubResource("StyleBoxFlat_ny5dp")
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="."]
visible = false
z_index = 2
offset_left = -27.0
offset_top = -34.0
offset_right = 27.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_fc6k0")
theme_override_styles/fill = SubResource("StyleBoxFlat_77f7n")
show_percentage = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
radius = 20.0
debug_use_custom = true
debug_path_custom_color = Color(0.455681, 0.233807, 0.971943, 1)

[node name="CollideTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="PathCalculateTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Attacktimer" type="Timer" parent="."]
one_shot = true

[node name="guard_area" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="guard_area"]
shape = SubResource("CircleShape2D_loigc")

[node name="attack_area" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
debug_color = Color(0.960784, 0.0901961, 0.027451, 1)

[node name="SelectArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectArea"]
shape = SubResource("CircleShape2D_8bial")

[node name="ExpArea" type="Area2D" parent="."]
visible = false
modulate = Color(0.468479, 0.291447, 0.0419928, 1)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExpArea"]
shape = SubResource("CircleShape2D_1ie7s")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Rays2" type="Node2D" parent="."]

[node name="BottomFront" type="RayCast2D" parent="Rays2"]
position = Vector2(0, 8)
rotation = -1.5708
target_position = Vector2(0, 30)
collision_mask = 3
collide_with_areas = true

[node name="TopFront" type="RayCast2D" parent="Rays2"]
position = Vector2(0, -8)
rotation = -1.5708
target_position = Vector2(0, 30)
collision_mask = 3
collide_with_areas = true

[node name="Front" type="RayCast2D" parent="Rays2"]
rotation = -1.5708
target_position = Vector2(0, 30)
collision_mask = 3
collide_with_areas = true

[node name="Bottom" type="Node2D" parent="Rays2"]

[node name="Bottom60" type="RayCast2D" parent="Rays2/Bottom"]
rotation = -0.523599
target_position = Vector2(0, 40)
collision_mask = 3
collide_with_areas = true

[node name="Bottom90" type="RayCast2D" parent="Rays2/Bottom"]
target_position = Vector2(0, 40)
collision_mask = 3
collide_with_areas = true

[node name="Top" type="Node2D" parent="Rays2"]

[node name="Top60" type="RayCast2D" parent="Rays2/Top"]
rotation = -2.61799
target_position = Vector2(0, 40)
collision_mask = 3
collide_with_areas = true

[node name="Top90" type="RayCast2D" parent="Rays2/Top"]
rotation = -3.14159
target_position = Vector2(0, 40)
collision_mask = 3
collide_with_areas = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="PathCalculateTimer" to="." method="_on_path_calculate_timer_timeout"]
[connection signal="body_exited" from="guard_area" to="." method="_on_guard_area_body_exited"]
